--- a/index.html
+++ b/index.html
@@ -1,19 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-    <header>
 
+<body class="open-sans-normal">
+    <header class="header bg-secondary">
+        <nav>
+            <h2 class="nav-title">Ma<span class="nav-primary">r</span>y</h2>
+            <ul>
+                <li><a class="primary-color" href="">Portfolio</a></li>
+                <li><a class="primary-color" href="">Blog</a></li>
+                <li><a href=""><button class="btn-nav">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="b-content">
+                <h4 class="banner-welcome primary-color">Hi, I am</h4>
+                <h2 class="banner-title">Mary Hardy</h2>
+                <p class="banner-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
+                <button class="button-one">Download CV</button>
+                <BUtton class="button-two">Contact</BUtton>
+            </div>
+            <img class="banner" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
-
+        <section class="about bg-secondary">
+            <section class="mid-bg">
+                <h3 class="sec-title">About Me</h3>
+                <p class="sec-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                    simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                    procured exceptional resulfs while working with me. Delivering work within time and budget which
+                    meets clients requirements in our mata.</p>
+                <div class="about-items">
+                    <div class="about-item">
+                        <p class="about-title">Name:</p>
+                        <p class="about-description">Mary Hardy</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">Email:</p>
+                        <p class="about-description">info@gmail.com</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">Date of Birth:</p>
+                        <p class="about-description">01 November 1994</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">From:</p>
+                        <p class="about-description">New Yourk, USA</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+        
+        <section class="skill-items">
+            <h2 class="sec-title text-center">What I do</h2>
+            <p class="sec-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="JS">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="react">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="node">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="MongoDB">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
