--- a/index.html
+++ b/index.html
@@ -89,9 +89,80 @@
                 </div>
             </div>
         </section>
+        <section class="resume">
+            <h2 class="sec-title resume-heading">A Summary of My Resume</h2>
+            <div class="resume-container">
+                <div class="resume-colum">
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">Master in Computer Engineering</h4>
+                        <h5 class="resume-position">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">Master in Computer Engineering</h4>
+                        <h5 class="resume-position">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">Master in Computer Engineering</h4>
+                        <h5 class="resume-position">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-colum">
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">Sr. Font End Developer</h4>
+                        <h5 class="resume-position">Apple Inc / 2020 - Current</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">Jr. Font End Developer</h4>
+                        <h5 class="resume-position">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-box">
+                        <h4 class="resume-subtitle">HTML Developer</h4>
+                        <h5 class="resume-position">Adobe Inc / 2017 - 2018</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="last-btn">
+                <button class="button-one">Download CV</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Sunday through Thursday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Inbox me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 
